objects/Page_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>This is a placeholder for holding data in AngularJS. No data will be persisited here.</description>
        <inlineHelpText>This is a placeholder for holding data in AngularJS. No data will be persisited here.</inlineHelpText>
        <label>Answer</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Text__c</fullName>
        <label>Page Text</label>
        <referenceTo>Page_Text__c</referenceTo>
        <relationshipLabel>Page Question</relationshipLabel>
        <relationshipName>Page_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subsection__c</fullName>
        <label>Subsection</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 Vision and approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Scope of the report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 The social problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1a Problem Causes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1b Consequences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1c Target Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Solution attempts made to date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 The solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Resources used (input)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Work performed (output)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Results achieved (outcome/impact)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 Presenting resources, work performed and results during the reporting period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 Provisions taken for the accompanying evaluation and qualitiy assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 Previous year comparison: Objectives achieved, learning experience and success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Planning and targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Influence factors: chances and risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Organisational structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Introduction of the participating individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Partnerships, cooperations and networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 General information about the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Governance of the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 Ownership structure, memberships and associated organisations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.4 Environmental and social profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Bookkeeping and accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Asset statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.3 Income and expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.4 Financial situation and planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Answer__c</columns>
        <columns>Page_Text__c</columns>
        <columns>Question_Text__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Subsection__c</columns>
        <columns>Summary__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Page Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>